# srfloat

./: CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: example.cpp  script_rosenbrock.ipynb  script_sum.ipynb
include/: common.h  sr.h  srfloat.h
python/: bindings.cpp
python/srfloat/: __init__.py
src/: CMakeLists.txt  sr.cpp
